<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_vertical_margin">

            <TableRow>

                <TextView
                    android:id="@+id/autenticacion_user_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_user"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/autenticacion_user_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:hint="@string/autenticacion_user_hint"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/autenticacion_pass_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_pass"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/autenticacion_pass_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:hint="@string/autenticacion_pass_hint"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/autenticacion_ip_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_ip"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/autenticacion_ip_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:hint="@string/autenticacion_ip_hint"
                    android:inputType="text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/autenticacion_port_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_port"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/autenticacion_port_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:hint="@string/autenticacion_port_hint"
                    android:inputType="number" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/autenticacion_envia_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="pulsar"
            android:text="@string/autenticacion_boton" />

    </LinearLayout>


</RelativeLayout>